# ProductHunt-Python-Scrapy-Scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
producthunt_scraper/: __init__.py  env.py  itemloaders.py  items.py  middlewares.py  pipelines.py  settings.py
producthunt_scraper/spiders/: featured_product_launches.py  mixins.py  trending_products.py
