# Build system requirements.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# Project metadata.
[project]
name = "producthunt_scraper"
version = "0.1.0"
description = "Python Scrapy spiders that scrapes data from producthunt.com"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "lykmapipo", email = "lallyelias87@gmail.com" },
]
maintainers = [
  { name = "lykmapipo", email = "lallyelias87@gmail.com" },
]
keywords = [
  "lykmapipo",
  "python",
  "scrapy",
  "scraper",
  "crawler",
  "spider",
  "producthunt",
  "product",
  "trending",
  "webscraper"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development",
]
dependencies = [
  "scrapy>=2.11.0",
  "fake-useragent>=1.3.0",
  "lxml>=4.9.3",
  "parsel>=1.8.1",
  "dict2dict>=0.3.0",
  "pandas>=2.0.3",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lykmapipo/ProductHunt-Python-Scrapy-Scraper"
Documentation = "https://github.com/lykmapipo/ProductHunt-Python-Scrapy-Scraper"
Repository = "https://github.com/lykmapipo/ProductHunt-Python-Scrapy-Scraper"
Issues = "https://github.com/lykmapipo/ProductHunt-Python-Scrapy-Scraper/issues"

# QA tools metadata
[tool.ruff]
fix = true
line-length = 88
src = ["src", "tests"]
target-version = "py38"
unfixable = []
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "RUF",  # Ruff-specific rules
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "I",  # isort
]
ignore = [
  "E501",  # line too long, handled by black
  "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["producthunt_scraper"]

[tool.pydocstyle]
convention = "numpy"

# Build system metadata.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["producthunt_scraper", "producthunt_scraper.*"]
exclude = ["tests*"]
namespaces = false
